--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 aniso8601==7.0.0
 asgiref==3.3.1
 Django==3.1.4
+django-quill-editor==0.1.16
+django-seed==0.2.2
+django-taggit==1.3.0
+Faker==6.0.0
 graphene==2.1.8
 graphene-django==2.15.0
 graphql-core==2.3.2
@@ -8,6 +12,7 @@ graphql-relay==2.0.1
 Pillow==8.1.0
 promise==2.3
 psycopg2-binary==2.8.6
+python-dateutil==2.8.1
 pytz==2020.5
 Rx==1.6.1
 singledispatch==3.4.0.3
