--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.1.4
 django-quill-editor==0.1.16
 django-seed==0.2.2
 django-taggit==1.3.0
+djangorestframework==3.12.2
 Faker==6.0.0
 graphene==2.1.8
 graphene-django==2.15.0
